--- a/src/main/resources/templates/animal-form.hbs
+++ b/src/main/resources/templates/animal-form.hbs
@@ -6,8 +6,8 @@
          <form class="form" action="/newAnimal" method="post">
            <h1 id="header">WILDLIFE TRACKER</h1>
                <div class="form-group">
-                                   <label> Ranger</label>
-                                   <input type="text" id="ranger" name="ranger" class="form-control" placeholder="Ranger Name">
+                                   <label> Name</label>
+                                   <input type="text" id="ranger" name="name" class="form-control" placeholder=" Name">
                                </div>
                                <div class="form-group">
                                    <label>Type of animal</label>
