--- a/src/main/resources/public/css/App.css
+++ b/src/main/resources/public/css/App.css
@@ -9,7 +9,7 @@ nav>ul li{
   display: inline-block;
   padding: 10px 30px;
   font-size: 1em;
-  color: black;
+  color: white;
   cursor: pointer;
 }
 
@@ -17,10 +17,10 @@ nav>ul li{
   position: relative;
   width: 400px;
   margin-top: 15px;
-  color: black;
+  color: white;
 }
 .form>h1{
-  color: aliceblue;
+  color: white;
   font-size: 2.3em;
 }
 .form>input[type=text],
@@ -31,7 +31,7 @@ nav>ul li{
   margin: 10px 0;
   border: none;
   border-bottom: 1px solid white;
-  color: aliceblue;
+  color: white;
   outline: none;
   display: block;
   font-size: 1em;
@@ -45,3 +45,8 @@ nav>ul li{
   color: white;
   font-size: 20px
 }
+ body{
+        background-image:url('/images/TheJungle.jpg');
+        background-repeat:no-repeat;
+        background-size:cover;
+        }
