--- a/src/main/resources/templates/animal-form.hbs
+++ b/src/main/resources/templates/animal-form.hbs
@@ -3,8 +3,9 @@
      <section class="landing-pg">
          <div class="land-left"></div>
          <div class="land-right"></div>
-         <form class="form" action="/newAnimal" method="post">
-           <h1 id="header">WILDLIFE TRACKER</h1>
+        <div class="well" >
+         <form class="form1" action="/newAnimal" method="post">
+           <h1 id="header">ADD ANIMALS</h1>
                <div class="form-group">
                                    <label> Name</label>
                                    <input type="text" id="ranger" name="name" class="form-control" placeholder=" Name">
@@ -60,6 +61,7 @@
                                </div>
              <input class="btns" type="submit">
          </form>
+       <div >
      </section>
  {{/partial}}
  {{> layout.hbs}}
