--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -17,7 +17,8 @@
         <nav>
           <ul>
             <a href="/"><li>Home</li></a>
-            <a href="/hero"><li>Animals</li></a>
+            <a href="/newAnimal"><li>Animals</li></a>
+             <a href="/new"><li>Sightings</li></a>
 
           </ul>
         </nav>
