add screenshoot of project

--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -1,6 +1,6 @@
 {{#partial "content"}}
 <div class="first">
-<h1>ALL SIGHTINGS</h1>
+<h1 ">ALL SIGHTINGS</h1>
 <table class="table table-bordered">
    <th scope="col">rangerName</th>
    <th scope="col">location</th>
